# idp-rag-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  IDP_RAG_Implementation_Blueprint.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/api/routes/: auth.py  documents.py  query.py
app/core/: config.py  logging.py  security.py  weave_setup.py
app/db/: base.py  sync_base.py
app/ingestion/: document_parser.py  docx_parser.py  embedder.py  pipeline.py  storage.py
app/retrieval/: bm25_cache.py  bm25_retriever.py  chroma_store.py  graph.py  hybrid_search.py  query_rewriter.py  reranker.py
app/schemas/: documents.py  query.py
chroma_store/0ed91180-7b6c-444b-8cac-ccf4fca0039e/: index_metadata.pickle
idp_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
logs/: app.jsonl.1
mcp_server/: server.py
scripts/: docker-entrypoint.sh  start_api.sh  start_ui.sh  start_worker.sh  test-docker.sh  wait_for_db.py
ui/: api_client.py  streamlit_app.py
uploads/9d096d37-896c-4a1e-9a38-8ce87a0da6d4/: cd05f694-e1ba-4cbe-9284-feb1d8ac6100_Accounts Payable Documents and Reports.docx
worker/: __main__.py
