[project]
name = "idp-rag"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.1.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.4",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "langgraph>=0.1.0",
    "openai>=1.30.0",
    "chromadb>=0.5.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "unstructured[pdf,docx]>=0.14.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.3.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "wandb>=0.17.0",
    "weave>=0.50.0",
    "structlog>=24.2.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "fastmcp>=0.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.1",
    "tenacity>=8.3.0",
    "umap-learn>=0.5.12",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
ui = [
    "streamlit>=1.35.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "worker*", "mcp_server*", "ui*"]

[project.scripts]
idp-worker = "worker.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
